[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Soslan <soso82@mail.ru>"]
packeges = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-games = "brain_games.scripts.brain_calc:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-even = "brain_games.scripts.brain_gcd:main"
brain-even = "brain_games.scripts.brain_progression:main"
